# Purchasing-Agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml
app/: __init__.py  bootstrap.py  config.py  main.py
app/api/: dependencies.py  health.py  middleware.py
app/cli/: __init__.py  chat.py
app/modules/: __init__.py
app/shared/: __init__.py  constants.py  errors.py  exception_handlers.py  identity.py  request_context.py  responses.py
docs/: COLLABORATION.md  agent-backend-interface-agreement.md  agent-runtime-refactor.md  api-contracts.md  architecture.md  backlog.md  codex-development-playbook.md  database-design-2.md  database-design.md  decisions.md  requirements.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: AgentChatPage.tsx  App.tsx  ApprovalPage.tsx  ProcurementPage.tsx  api.ts  main.tsx  styles.css  types.ts
migrations/: README  env.py
migrations/versions/: 0001_database_baseline.py  0002_demo_core_tables.py  0003_procurement_approval_workflow.py  0004_requirement_draft_api.py  0005_auth_rbac_foundation.py  0006_approval_procurement_routing.py
scripts/: __init__.py  seed_auth_development.py  seed_development_data.py
skills/collect-procurement-requirement/: SKILL.md
skills/confirm-procurement-requirement/: SKILL.md
skills/recommend-historical-supplier/: SKILL.md
tests/: test_agent_api.py  test_api_contracts.py  test_application.py  test_auth_api.py  test_config.py  test_database.py  test_health.py  test_requirement_api.py  test_workflow_api.py
tests/agent/: mock_procurement_backend.py  test_agent_policies.py  test_chat_service.py  test_model_providers.py  test_procurement_agent_loop.py  test_procurement_backend_contract.py  test_procurement_backend_live.py  (+6 more)
(+71 files in other folders)
