[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "purchasing-agent"
version = "0.1.0"
description = "Data center purchasing workflow agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2.0",
    "argon2-cffi>=23,<26",
    "asyncmy>=0.2,<1.0",
    "cryptography>=46,<50",
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.10,<3.0",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.40,<1.0",
    "httpx>=0.28,<1.0",
    "openai>=1.60,<2.0",
    "redis>=5.2,<6.0",
]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8,<9",
    "pytest-asyncio>=1.0,<2.0",
    "ruff>=0.8,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a disposable MySQL 8 test database"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
